--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/collectibles
 spring.datasource.username=mike
 spring.datasource.password=kuntakite1
+
+server.error.whitelabel.enabled=false
